--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
         <div class="contact-bg  bg-success bg-opacity-10 ">
           <div class="container  p-1 text-primary align-items-center">
             <h1 class="text-center fs-1 border-bottom border-4 border-secondary mt-5 ">Contact</h1>
-            <p class="fs-4 mt-4"> Customer Support</p>
+            <h2 class="fs-4 mt-4"> Customer Support</h2>
             <div class=" d-flex gap-2 align-items-center">
                 <p class="fs-3">Phone</p>
                 <i class="fa fa-phone text-secondary fs-4 margin-unset" style="margin-bottom: 15px;" ></i>
