--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="container p-3">
-          <h2 class="text-center p-3 fs-1">Auctions</h2>
+          <h1 class="text-center p-3 fs-1">Auctions</h1>
           <div class=" justify-content-between align-items-center gap-3 d-flex flex-column flex-sm-row ">
           <form class="col-md-6 border border-secondary border-5 border-top-0 border-end-0 border-start-0">
             <input
@@ -159,6 +159,7 @@
                             <div id="mediaGallery">
                               <div class="auctionMedia">
                                 <input
+                                id="auctionMedia"
                                   type="text"
                                   class="form-control"
                                   name="media"
@@ -170,12 +171,14 @@
                             <button
                               type="button"
                               class=" addImageButton btn btn-secondary mt-2"
+                              aria-label="add number of image fields"
                             >
                             <i class="fa-solid fa-plus"></i>
                             </button>
                             <button
                               type="button"
                               class=" removeImageButton btn btn-secondary mt-2"
+                              aria-label="Remove number of image fields"
                             >
                             <i class="fa-solid fa-minus"></i>
                             </button>
