--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/utilities/utilities.mjs" type="module" defer></script>
-    <script src="/js/auth/login.mjs" type="module" defer></script>
+    <script src="/js/utilities/utilities.mjs" type="module"></script>
+    <script src="/js/auth/login.mjs" type="module"></script>
   </head>
-</html>
 <body>
   <header class="navbar navbar-expand-lg sticky-top p-0">
       <div class="container bg-primary">
@@ -196,12 +195,12 @@
         <p class="text-center mt-1">Vintage$Brokers 2023</p>
       </div>
     </footer>
-    <button
-    class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
-    id="back-to-up"
-    aria-label="Scroll to top"
-  >
-    <i class="fa fa-arrow-up" aria-hidden="true"></i>
-  </button>
-</body>
+      <button
+      class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
+      id="back-to-up"
+      aria-label="Scroll to top"
+    >
+      <i class="fa fa-arrow-up" aria-hidden="true"></i>
+    </button>
+  </body>
 </html>
