--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Mikael Even Selstad" />
-    <meta name="title" content="Vintage Brokers - Your Gateway to Refined Luxury" />
-    <meta name="description" content="Explore a curated collection of opulent watches, fashion, and furniture at Vintage Brokers. Step into a world of timeless elegance, where each piece embodies craftsmanship, history, and enduring style." />
-    <meta name="keywords" content="Vintage Brokers, luxury watches, opulent fashion, refined furniture, vintage auction, enduring elegance" />    
-    <title> Vintag$Brokers | Login</title>
+    <meta
+      name="title"
+      content="Vintage Brokers - Your Gateway to Refined Luxury"
+    />
+    <meta
+      name="description"
+      content="Explore a curated collection of opulent watches, fashion, and furniture at Vintage Brokers. Step into a world of timeless elegance, where each piece embodies craftsmanship, history, and enduring style."
+    />
+    <meta
+      name="keywords"
+      content="Vintage Brokers, luxury watches, opulent fashion, refined furniture, vintage auction, enduring elegance"
+    />
+    <title>Vintag$Brokers | Login</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <link
       rel="stylesheet"
@@ -20,18 +29,20 @@
     <script src="/js/utilities/utilities.mjs" type="module"></script>
     <script src="/js/auth/login.mjs" type="module"></script>
   </head>
-<body>
-  <header class="navbar navbar-expand-lg sticky-top p-0">
+  <body>
+    <header class="navbar navbar-expand-lg sticky-top p-0">
       <div class="container bg-primary">
-        <a href="/index.html"
-        id="redirectLink"
-         class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
+        <a
+          href="/index.html"
+          id="redirectLink"
+          class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
             src="/images/Vintagebrokers.logo.jpg"
             alt="Pokétown Logo"
             width="100"
-            class="rounded-circle p-1">
-            <span class="d-sm-inline d-none ms-2">Vintage$Brokers</span></a
+            class="rounded-circle p-1"
+          />
+          <span class="d-sm-inline d-none ms-2">Vintage$Brokers</span></a
         >
         <button
           class="navbar-toggler"
@@ -40,7 +51,7 @@
           data-bs-target=".navbar-collapse"
           aria-label="Toggle Navigation"
         >
-          <span class="navbar-toggler-icon" ></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto me-1-sm float-end fs-5">
@@ -50,157 +61,228 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary" id="loginAnchor" href="">Login</a>
+              <a class="nav-link text-secondary" id="loginAnchor" href=""
+                >Login</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary" href="register.html">Register</a>
+              <a class="nav-link text-secondary" href="register.html"
+                >Register</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </header>
-    <main >
-        <h1 class=" text-center p-3 brand-name">Embrace The Extraordinary</h1>
-        <div id="carouselExampleCaptions" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
-            <div id="myCustomCarousel" class="carousel container-fluid slide mb-1" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#myCustomCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <a href="/feed/auctions.html">
-                          <img src="/images/carouselImage1.jpg" class="d-block w-100" alt="Image of a luxurious watch">
-                      </a>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2 class="text-white custom-text  bg-primary bg-opacity-50">Watches</h2>
-                    </div>
-                    </div>
-                    <div class="carousel-item">
-                      <a href="/feed/auctions.html">
-                          <img src="/images/carouselImage2.jpg" class="d-block w-100" alt="Image of a man in a Tuxedo">
-                      </a>
-                      <div class="carousel-caption d-none d-md-block">
-                          <h2 class="text-white custom-text  bg-primary bg-opacity-50">Men</h2>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <a href="/feed/auctions.html">
-                        <img src="/images/carouselImage3.jpg" class="d-block w-100" alt="Image of a woman in a red dress">
-                      </a>
-                      <div class="carousel-caption d-none d-md-block">
-                          <h2 class="text-white custom-text bg-primary bg-opacity-50">Women</h2>
-                      </div>
-                    </div>
-                  </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#myCustomCarousel" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#myCustomCarousel" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                  </button>
-              </div>            
-              <div class="container-fluid text-center text-primary">
-                  <div class="masthead bg-image">
-                      <div class="row h-100 justify-content-center align-items-center">
-                      <div class="col-lg-4 col-md-6 col-sm-8">
-                          <h2 class="text-primary fs-2">Please log in</h2>
-                          <form id="loginForm" method="post" class="needs-validation mb-3">
-                            <div class="form-floating mb-3 fw-bold fs-6">
-                              <input
-                                type="text"
-                                class="form-control"
-                                id="userEmail"
-                                name="email"
-                                placeholder="E-mail"
-                                required
-                              />
-                              <label for="userEmail">Email...</label>
-                              <div class="invalid-feedback text-danger">
-                                Please enter a registered email address.
-                              </div>
-                            </div>
-                            <div class="form-floating fw-bold fs-6">
-                              <input
-                                type="password"
-                                class="form-control"
-                                id="userPassword"
-                                name="password"
-                                placeholder="Password"
-                                required
-                                minlength="8"
-                              />
-                              <label for="userPassword">Password</label>
-                              <div class="invalid-feedback">
-                                Password must be at least 8 characters long.
-                              </div>
-                            </div>
-                            <div id="errorMessage" class="text-danger mt-2 fs-4"></div>
-                            <div class="d-grid gap-2 col-6 mx-auto">
-                              <button
-                                id="loginButton"
-                                type="submit"
-                                class="btn btn-primary btn-lg border border-secondary border-3 text-white btn-lg mt-3"
-                              >
-                                Login
-                              </button>
-                            </div>
-                          </form>                
-                      </div>
-                      <div class="col-lg-4 col-md-6 col-sm-6">
-                          <div class="justify-content-center p-3 ms-5">
-                              <p class="fs-1">Not a member?</p>
-                              <p class="fs-3">
-                                  Register
-                                  <a href="/register.html" class="text-info fs-1 text-decoration-underline">Here</a>
-                                  or continue as
-                                  <a href="/feed/auctions.html" class="text-info fs-1 text-decoration-underline">Guest</a>
-                              </p>
-                          </div> 
-                      </div>
-                  </div>
-              </div>
-          </main>
-          <footer class="container-fluid bg-success bg-opacity-25 mt-1">
-            <div class="row align-items-center">
-              <div class="col-md-6">
-                <nav class="navbar navbar-expand-lg">
-                  <div class="container-fluid justify-content-evenly fs-4 p-3">
-                    <ul class="navbar-nav">
-                      <li class="nav-item mx-5">
-                        <a class="nav-link" href="/register.html">Register</a>
-                      </li>
-                      <li class="nav-item mx-5">
-                        <a class="nav-link" href="/about.html">About Us</a>
-                      </li>
-                      <li class="nav-item mx-5">
-                        <a class="nav-link" href="/contact.html">Contact</a>
-                      </li>
-                    </ul>
-                  </div>
-                </nav>
-              </div>
-              <div class="col-md-6 mt-3">
-                <p class="fs-4 text-center">Get Social With US</p>
-                <div class="d-flex flex-row justify-content-center gap-5">
-                  <i class="fa-brands fa-facebook fs-1 text-info"></i>
-                  <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
-                  <i class="fa-brands fa-twitter fs-1 text-info"></i>
-                  <i class="fa-brands fa-linkedin fs-1 text-dark"></i>
-                </div>
-              </div>
-              <p class="text-center mt-1">Vintage$Brokers 2023</p>
-            </div>
-        </footer>
-      <button
-        class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
-        id="back-to-up"
-        aria-label="Scroll to top"
+    <main>
+      <h1 class="text-center p-3 brand-name">Embrace The Extraordinary</h1>
+      <div
+        id="carouselExampleCaptions"
+        class="carousel container-fluid slide mb-1"
+        data-bs-ride="carousel"
       >
-        <i class="fa fa-arrow-up" aria-hidden="true"></i>
-      </button>
+        <div
+          id="myCustomCarousel"
+          class="carousel container-fluid slide mb-1"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#myCustomCarousel"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#myCustomCarousel"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#myCustomCarousel"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <a href="/feed/auctions.html">
+                <img
+                  src="/images/carouselImage1.jpg"
+                  class="d-block w-100"
+                  alt="Image of a luxurious watch"
+                />
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <h2 class="text-white custom-text bg-primary bg-opacity-50">
+                  Watches
+                </h2>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/feed/auctions.html">
+                <img
+                  src="/images/carouselImage2.jpg"
+                  class="d-block w-100"
+                  alt="Image of a man in a Tuxedo"
+                />
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <h2 class="text-white custom-text bg-primary bg-opacity-50">
+                  Men
+                </h2>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/feed/auctions.html">
+                <img
+                  src="/images/carouselImage3.jpg"
+                  class="d-block w-100"
+                  alt="Image of a woman in a red dress"
+                />
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <h2 class="text-white custom-text bg-primary bg-opacity-50">
+                  Women
+                </h2>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#myCustomCarousel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#myCustomCarousel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <div class="container-fluid text-center text-primary">
+          <div class="masthead bg-image">
+            <div class="row h-100 justify-content-center align-items-center">
+              <div class="col-lg-4 col-md-6 col-sm-8">
+                <h2 class="text-primary fs-2">Please log in</h2>
+                <form
+                  id="loginForm"
+                  method="post"
+                  class="needs-validation mb-3"
+                >
+                  <div class="form-floating mb-3 fw-bold fs-6">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="userEmail"
+                      name="email"
+                      placeholder="E-mail"
+                      required
+                    />
+                    <label for="userEmail">Email...</label>
+                    <div class="invalid-feedback text-danger">
+                      Please enter a registered email address.
+                    </div>
+                  </div>
+                  <div class="form-floating fw-bold fs-6">
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="userPassword"
+                      name="password"
+                      placeholder="Password"
+                      required
+                      minlength="8"
+                    />
+                    <label for="userPassword">Password</label>
+                    <div class="invalid-feedback">
+                      Password must be at least 8 characters long.
+                    </div>
+                  </div>
+                  <div id="errorMessage" class="text-danger mt-2 fs-4"></div>
+                  <div class="d-grid gap-2 col-6 mx-auto">
+                    <button
+                      id="loginButton"
+                      type="submit"
+                      class="btn btn-primary btn-lg border border-secondary border-3 text-white btn-lg mt-3"
+                    >
+                      Login
+                    </button>
+                  </div>
+                </form>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="justify-content-center p-3 ms-5">
+                  <p class="fs-1">Not a member?</p>
+                  <p class="fs-3">
+                    Register
+                    <a
+                      href="/register.html"
+                      class="text-info fs-1 text-decoration-underline"
+                      >Here</a
+                    >
+                    or continue as
+                    <a
+                      href="/feed/auctions.html"
+                      class="text-info fs-1 text-decoration-underline"
+                      >Guest</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="container-fluid bg-success bg-opacity-25 mt-1">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid justify-content-evenly fs-4 p-3">
+              <ul class="navbar-nav">
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="/register.html">Register</a>
+                </li>
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="/about.html">About Us</a>
+                </li>
+                <li class="nav-item mx-5">
+                  <a class="nav-link" href="/contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+        <div class="col-md-6 mt-3">
+          <p class="fs-4 text-center">Get Social With US</p>
+          <div class="d-flex flex-row justify-content-center gap-5">
+            <i class="fa-brands fa-facebook fs-1 text-info"></i>
+            <i class="fa-brands fa-square-instagram text-danger fs-1"></i>
+            <i class="fa-brands fa-twitter fs-1 text-info"></i>
+            <i class="fa-brands fa-linkedin fs-1 text-dark"></i>
+          </div>
+        </div>
+        <p class="text-center mt-1">Vintage$Brokers 2023</p>
+      </div>
+    </footer>
+    <button
+      class="btn btn-lg btn-primary rounded-circle position-fixed bottom-0 end-0 translate-middle d-none"
+      id="back-to-up"
+      aria-label="Scroll to top"
+    >
+      <i class="fa fa-arrow-up" aria-hidden="true"></i>
+    </button>
   </body>
 </html>
