--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Mikael Even Selstad" />
-    <meta name="title" content="Vintage Brokers - Your Gateway to Refined Luxury" />
-    <meta name="description" content="Explore a curated collection of opulent watches, fashion, and furniture at Vintage Brokers. Step into a world of timeless elegance, where each piece embodies craftsmanship, history, and enduring style." />
-    <meta name="keywords" content="Vintage Brokers, luxury watches, opulent fashion, refined furniture, vintage auction, enduring elegance" />    
+    <meta
+      name="title"
+      content="Vintage Brokers - Your Gateway to Refined Luxury"
+    />
+    <meta
+      name="description"
+      content="Explore a curated collection of opulent watches, fashion, and furniture at Vintage Brokers. Step into a world of timeless elegance, where each piece embodies craftsmanship, history, and enduring style."
+    />
+    <meta
+      name="keywords"
+      content="Vintage Brokers, luxury watches, opulent fashion, refined furniture, vintage auction, enduring elegance"
+    />
     <title>Vintag$Brokers | About Us</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <link
@@ -31,7 +40,8 @@
             alt="Pokétown Logo"
             width="100"
             class="rounded-circle p-1"
-          />    <span class="d-sm-inline d-none ms-2">Vintage$Brokers</span></a
+          />
+          <span class="d-sm-inline d-none ms-2">Vintage$Brokers</span></a
         >
         <button
           class="navbar-toggler"
@@ -50,11 +60,7 @@
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link text-secondary"
-                href="/index.html"
-                >Login</a
-              >
+              <a class="nav-link text-secondary" href="/index.html">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-secondary" href="register.html"
@@ -62,14 +68,14 @@
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link text-secondary "
-                href="about.html"
-                >About</a
-              >
+              <a class="nav-link text-secondary" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-secondary text-decoration-underline active" href="contact.html">Contact</a>
+              <a
+                class="nav-link text-secondary text-decoration-underline active"
+                href="contact.html"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -77,22 +83,33 @@
     </header>
     <main>
       <div class="container-fluid text-center">
-        <div class="contact-bg  bg-success bg-opacity-10 ">
-          <div class="container  p-1 text-primary align-items-center">
-            <h1 class="text-center fs-1 border-bottom border-4 border-secondary mt-5 ">Contact</h1>
-            <h2 class="fs-4 mt-4"> Customer Support</h2>
-            <div class=" d-flex gap-2 align-items-center">
-                <p class="fs-3">Phone</p>
-                <i class="fa fa-phone text-secondary fs-4 margin-unset" style="margin-bottom: 15px;" ></i>
-                <p class="fs-3  ms-2">+47 815 412 00</p>
+        <div class="contact-bg bg-success bg-opacity-10">
+          <div class="container p-1 text-primary align-items-center">
+            <h1
+              class="text-center fs-1 border-bottom border-4 border-secondary mt-5"
+            >
+              Contact
+            </h1>
+            <h2 class="fs-4 mt-4">Customer Support</h2>
+            <div class="d-flex gap-2 align-items-center">
+              <p class="fs-3">Phone</p>
+              <i
+                class="fa fa-phone text-secondary fs-4 margin-unset"
+                style="margin-bottom: 15px"
+              ></i>
+              <p class="fs-3 ms-2">+47 815 412 00</p>
             </div>
-            <div class=" d-flex  align-items-center">
-                <p class="fs-3 ">Email</p>
-                <i class="fa-solid fa-envelope text-secondary  fs-4 margin-unset" style="margin-bottom: 15px;" ></i>
-                <p class="fs-3 ms-5 text-break">VintageBrokers@support.com</p>
+            <div class="d-flex align-items-center">
+              <p class="fs-3">Email</p>
+              <i
+                class="fa-solid fa-envelope text-secondary fs-4 margin-unset"
+                style="margin-bottom: 15px"
+              ></i>
+              <p class="fs-3 ms-5 text-break">VintageBrokers@support.com</p>
             </div>
           </div>
         </div>
+      </div>
     </main>
     <footer class="container-fluid bg-success bg-opacity-25">
       <div class="row align-items-center">
