--- a/profile/index.html
+++ b/profile/index.html
@@ -33,7 +33,7 @@
         class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
         ><img
           src="/images/Vintagebrokers.logo.jpg"
-          alt="Pokétown Logo"
+          alt="VintageBrokers Logo"
           width="100"
           class="rounded-circle p-1"
         />
@@ -230,15 +230,14 @@
                       <i class="fa-solid fa-minus"></i>
                       </button>
                       <div class="modal-footer justify-content-around mt-2">
-                          <button
-                              type="submit"
-                              id="createAuctionButton"
-                              aria-label="Create Auction"
-                              class=" mainButton btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
-                          >
-                              Create Auction
-                          </button>
-                        </button>
+                      <button
+                          type="submit"
+                          id="createAuctionButton"
+                          aria-label="Create Auction"
+                          class=" mainButton btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
+                      >
+                          Create Auction
+                      </button>
                   </form>
               </div>
           </div>
