--- a/profile/index.html
+++ b/profile/index.html
@@ -17,12 +17,12 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/utilities/utilities.mjs" type="module" defer></script>
-   <script src="/js/auth/logout.mjs" type="module" defer></script>
-   <script src="/js/profile/profileInfo.mjs" type="module" defer></script>
-   <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
-   <script src="/js/auctions/editAuctions.mjs" type="module" defer></script>
-   <script src="/js/auctions/deleteAuction.mjs" type="module" defer></script>
+    <script src="/js/utilities/utilities.mjs" type="module"></script>
+   <script src="/js/auth/logout.mjs" type="module"></script>
+   <script src="/js/profile/profileInfo.mjs" type="module"></script>
+   <script src="/js/auctions/createAuction.mjs" type="module"></script>
+   <script src="/js/auctions/editAuctions.mjs" type="module"></script>
+   <script src="/js/auctions/deleteAuction.mjs" type="module"></script>
   </head>
 <body>
   <header class="navbar navbar-expand-lg sticky-top p-0">
