--- a/profile/index.html
+++ b/profile/index.html
@@ -238,6 +238,7 @@
                       >
                           Create Auction
                       </button>
+                      </div>
                   </form>
               </div>
           </div>
