--- a/profile/index.html
+++ b/profile/index.html
@@ -333,7 +333,6 @@
                         >
                             Save
                         </button>
-                      </button>
                       <button
                           type="submit"
                           id="deleteAuctionButton"
@@ -341,6 +340,7 @@
                       >
                           Delete
                       </button>
+                    </div>
                 </form>
             </div>
         </div>
