--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -17,12 +17,12 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/utilities/utilities.mjs" type="module" defer></script>
-    <script src="/js/auth/logout.mjs" type="module" ></script>
-    <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
-    <script src="/js/feed/fetchAllAuctions.mjs" type="module" defer></script>
-    <script src="/js/feed/fetchLoggedInUser.mjs" type="module" defer></script>
-    <script src="/js/feed/search.mjs" type="module" defer></script>
+    <script src="/js/utilities/utilities.mjs" type="module"></script>
+    <script src="/js/auth/logout.mjs" type="module"></script>
+    <script src="/js/auctions/createAuction.mjs" type="module"></script>
+    <script src="/js/feed/fetchAllAuctions.mjs" type="module"></script>
+    <script src="/js/feed/fetchLoggedInUser.mjs" type="module"></script>
+    <script src="/js/feed/search.mjs" type="module"></script>
   </head>
 </html>
 <body>
@@ -34,7 +34,7 @@
             class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
             ><img
               src="/images/Vintagebrokers.logo.jpg"
-              alt="Pokétown Logo"
+              alt="VintageBrokers Logo"
               width="100"
               class="rounded-circle p-1"
             />
