--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -7,7 +7,7 @@
     <meta name="title" content="Vintage Brokers - Your Gateway to Refined Luxury" />
     <meta name="description" content="Explore a curated collection of opulent watches, fashion, and furniture at Vintage Brokers. Step into a world of timeless elegance, where each piece embodies craftsmanship, history, and enduring style." />
     <meta name="keywords" content="Vintage Brokers, luxury watches, opulent fashion, refined furniture, vintage auction, enduring elegance" />    
-    <title>Vintag$Brokers | Auctions</title>
+    <title>Vintage$Brokers | Auctions</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <link
       rel="stylesheet"
@@ -24,7 +24,6 @@
     <script src="/js/feed/fetchLoggedInUser.mjs" type="module"></script>
     <script src="/js/feed/search.mjs" type="module"></script>
   </head>
-</html>
 <body>
   <header class="navbar navbar-expand-lg sticky-top p-0">
         <div class="container bg-primary">
