--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -18,13 +18,12 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module"></script>
-    <script src="/js/auth/logout.mjs" type="module" defer></script>
-    <script src="/js/auctions/createAuction.mjs" type="module" defer></script>
-    <script src="/js/auctions/bidOnAuction.mjs" type="module" defer></script>
-    <script src="/js/feed/fetchLoggedInUser.mjs" type="module" defer></script>
-    <script src="/js/feed/fetchSingleAuction.mjs" type="module" defer></script>
+    <script src="/js/auth/logout.mjs" type="module"></script>
+    <script src="/js/auctions/createAuction.mjs" type="module"></script>
+    <script src="/js/auctions/bidOnAuction.mjs" type="module"></script>
+    <script src="/js/feed/fetchLoggedInUser.mjs" type="module"></script>
+    <script src="/js/feed/fetchSingleAuction.mjs" type="module"></script>
   </head>
-</html>
 <body>
   <header class="navbar navbar-expand-lg sticky-top p-0">
         <div class="container bg-primary">
