--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -105,7 +105,6 @@
                               class="form-control mt-1 mb-3"
                               placeholder="Add description"
                               id="auctionBody"
-                              type="text"
                               name="body"
                               required
                               rows="3"
@@ -165,7 +164,7 @@
                               >
                                   Create Auction
                               </button>
-                            </button>
+                          </div>
                       </form>
                   </div>
               </div>
