--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       name="keywords"
       content="Vintage Brokers, luxury watches, opulent fashion, refined furniture, vintage auction, enduring elegance"
     />
-    <title>Vintag$Brokers | About Us</title>
+    <title>Vintag$Brokers | Contact</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <link
       rel="stylesheet"
@@ -37,7 +37,7 @@
           class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
             src="/images/Vintagebrokers.logo.jpg"
-            alt="Pokétown Logo"
+            alt="VintageBrokers Logo"
             width="100"
             class="rounded-circle p-1"
           />
