--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
           class="navbar-brand d-flex align-items-center text-secondary brand-name fs-1"
           ><img
             src="/images/Vintagebrokers.logo.jpg"
-            alt="Pokétown Logo"
+            alt="VintageBrokers Logo"
             width="100"
             class="rounded-circle p-1"
           />
