--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             ></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item carouselIndex active">
               <a href="/feed/auctions.html">
                 <img
                   src="/images/carouselImage1.jpg"
@@ -123,7 +123,7 @@
                 </h2>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item carouselIndex">
               <a href="/feed/auctions.html">
                 <img
                   src="/images/carouselImage2.jpg"
@@ -137,7 +137,7 @@
                 </h2>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item carouselIndex">
               <a href="/feed/auctions.html">
                 <img
                   src="/images/carouselImage3.jpg"
