--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -116,7 +116,7 @@
             >Sort Auctions</label
           >
           <select class="sortAuctions" name="sortAuctions" id="sortAuctions">
-            <option value="">SORT BY:</option>
+            <option value="">Sort By:</option>
             <option value="priceHtoL">Price: High - low</option>
             <option value="priceLtoH">Price: Low - High</option>
             <option value="ending">Auction Ending</option>
