--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module"></script>
+    <script src="/js/utilities/loginRedirect.mjs" type="module"></script>
   </head>
   <body>
     <header class="navbar navbar-expand-lg sticky-top p-0">
@@ -62,6 +63,14 @@
             <li class="nav-item">
               <a class="nav-link text-secondary" href="register.html"
                 >Register</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link text-secondary"
+                id="loginAnchor"
+                href="/index.html"
+                >Login</a
               >
             </li>
             <li class="nav-item">
