--- a/feed/auctionSpecific.html
+++ b/feed/auctionSpecific.html
@@ -108,9 +108,9 @@
       >
         <div class="modal-dialog">
           <div
-            class="modal-content border border-3 border-secondary bg-info text-white"
+            class="modal-content border border-3 border-secondary bg-primary bg-opacity-75 text-white"
           >
-            <div class="modal-header" id="createAuctionModal-header">
+            <div class="modal-header bg-primary" id="createAuctionModal-header">
               <h4 class="modal-title">Create New Auction</h4>
               <button
                 type="button"
@@ -122,7 +122,7 @@
             </div>
             <div class="modal-body">
               <form id="createNewAuctionForm">
-                <label for="auctionTitle" class="form-label text-start"
+                <label for="auctionTitle" class="form-label text-start fs-4"
                   >Title</label
                 >
                 <div class="auctionTitle">
@@ -132,10 +132,11 @@
                     id="auctionTitle"
                     name="title"
                     placeholder="Change Title"
+                    maxlength="25"
                     required
                   />
                 </div>
-                <label for="auctionBody" class="form-label text-start mt-2"
+                <label for="auctionBody" class="form-label text-start mt-2 fs-4"
                   >Body:</label
                 >
                 <textarea
@@ -146,7 +147,9 @@
                   required
                   rows="3"
                 ></textarea>
-                <label for="auctionEndsAt" class="form-label text-start mt-2"
+                <label
+                  for="auctionEndsAt"
+                  class="form-label text-start mt-2 fs-4"
                   >Ends At:</label
                 >
                 <div class="auctionEndsAt">
@@ -158,7 +161,7 @@
                     required
                   />
                 </div>
-                <label for="auctionTags" class="form-label text-start mt-2"
+                <label for="auctionTags" class="form-label text-start mt-2 fs-4"
                   >Tags</label
                 >
                 <div class="auctionTags">
@@ -167,19 +170,21 @@
                     class="form-control"
                     id="auctionTags"
                     name="tags"
-                    placeholder="Add Tags, use comma between tags"
+                    placeholder="Add Tag"
                   />
                 </div>
-                <label for="auctionMedia" class="form-label text-start mt-2"
+                <label
+                  for="auctionMedia"
+                  class="form-label text-start mt-2 fs-4"
                   >Image URL:</label
                 >
                 <div id="mediaGallery">
                   <div class="auctionMedia">
                     <input
+                      id="auctionMedia"
                       type="text"
                       class="form-control"
                       name="media"
-                      id="auctionMedia"
                       placeholder="Add Image"
                       required
                     />
@@ -199,11 +204,13 @@
                 >
                   <i class="fa-solid fa-minus"></i>
                 </button>
-                <div class="modal-footer justify-content-around mt-2">
+                <div
+                  class="modal-footer justify-content-around mt-2 modal-background"
+                >
                   <button
                     type="submit"
                     id="createAuctionButton"
-                    class="mainButton btn btn-secondary border border-primary btn-lg mt-2 ml-auto"
+                    class="mainButton btn btn-secondary border border-primary btn-lg mt-2 ml-auto fw-bold"
                   >
                     Create Auction
                   </button>
