--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/utilities/utilities.mjs" type="module"></script>
+    <script src="/js/utilities/loginRedirect.mjs" type="module"></script>
     <script src="/js/auth/login.mjs" type="module"></script>
   </head>
   <body>
@@ -222,7 +223,7 @@
                   </div>
                 </form>
               </div>
-              <div class="col-lg-4 col-md-6 col-sm-6">
+              <div class="col-lg-4 col-md-6 col-sm-6 custom-text">
                 <div class="justify-content-center p-3 ms-5">
                   <p class="fs-1">Not a member?</p>
                   <p class="fs-3">
