--- a/feed/auctions.html
+++ b/feed/auctions.html
@@ -86,7 +86,7 @@
     <main>
       <h1 class="text-center p-5 visually-hidden">All Auctions</h1>
       <div
-        class="container loggedInBox profileBanner text-center p-3 bg-success bg-opacity-25 fs-3 text-danger border border-secondary border"
+        class="container loggedInBox profileBanner text-center p-3 bg-success bg-opacity-25 fs-3 custom-text border border-secondary border"
       >
         You need to log in to bid on auctions!
         <div
