--- a/index.html
+++ b/index.html
@@ -227,11 +227,10 @@
                 <div class="justify-content-center p-3 ms-5">
                   <p class="fs-1">Not a member?</p>
                   <p class="fs-3">
-                    Register
                     <a
                       href="/register.html"
                       class="text-info fs-1 text-decoration-underline"
-                      >Here</a
+                      >Register</a
                     >
                     or continue as
                     <a
